syntax = "proto3";
import "google/protobuf/Empty.proto";
import "google/protobuf/timestamp.proto";
package CareerCloud.gRPC;
option csharp_namespace = "CareerCloud.gRPC.Protos";
service ApplicantJobApplicationService{
	rpc GetApplicantJobApplication(IdRequest1) returns (ApplicantJobApplication);
	rpc CreateApplicantJobApplication(ApplicantJobApplications) returns(google.protobuf.Empty);
	rpc DeleteApplicantJobApplication(ApplicantJobApplications) returns(google.protobuf.Empty);
	rpc UpdateApplicantJobApplication(ApplicantJobApplications) returns(google.protobuf.Empty);
}
message IdRequest1
{
	string Id=1;
}
message ApplicantJobApplication{
    string Id=1;
    string Applicant=2;
    string Job=3;
    google.protobuf.Timestamp ApplicationDate=4;
}
message ApplicantJobApplications{
	repeated ApplicantJobApplication AppJobEdu=1;
}